incorporate revisions from Katherine

--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ french_address: |
 phone: "(555) 555-5555"
 author_footnote: "Email: John.Cristiani@dfo-mpo.gc.ca | telephone: (250) 756-5555"
 abstract: |
-  Coastal marine ecosystems face threats from various marine and terrestrial human activities. Shoreline modifications that result from these activities can significantly impact the health and functioning of coastal biogenic habitats, including seagrass meadows. Understanding the presence and extent of shoreline modifications adjacent to seagrass meadows is therefore crucial for assessing potential human impacts to seagrass ecosystems. This technical report aims to map, characterize, and quantify shoreline modifications adjacent to known eelgrass (*Zostera marina*) meadows in the Strait of Georgia Bioregion of British Columbia. Using aerial imagery and a spatial dataset of seagrass distribution compiled from various sources, we digitized shoreline modifications within 100 meters of the coastline adjacent to each seagrass meadow. We focused on structures and areas that have been de-vegetated and altered form their natural state. We characterized modifications into six categories (road, residential, industrial, agriculture, greenspace, unclear), and we recorded additional descriptions for each category (e.g. road: paved). We found that the median percent of shoreline area that is modified was 9%. Of the 685 meadows analyzed 19% had no modifications, and 9% were more than 50% modified. The dominant modification type across the study area was residential development. The resulting dataset provides valuable information for assessing land use patterns and predicting potential impacts to nearshore ecosystems. Future efforts should continue to add to and refine the shoreline modification dataset as seagrass spatial datasets are updated. This study highlights the importance of managing seagrass within its broader seascape and landscape context, and it emphasizes the need for ongoing data collection and analysis to inform effective seagrass management strategies.
+  Coastal marine ecosystems face threats from various marine and terrestrial human activities. Shoreline modifications that result from these activities can significantly impact the health and functioning of coastal biogenic habitats, including seagrass meadows. Understanding the presence and extent of shoreline modifications adjacent to seagrass meadows is therefore crucial for assessing potential human impacts to seagrass ecosystems. This technical report aims to map, characterize, and quantify shoreline modifications adjacent to known eelgrass (*Zostera marina*) meadows in the Strait of Georgia Bioregion of British Columbia. Using aerial imagery and a spatial dataset of seagrass distribution compiled from various sources, we digitized shoreline modifications within 100 meters of the coastline adjacent to each seagrass meadow. We focused on structures and areas that have been de-vegetated and altered from their natural state. We characterized modifications into six categories (road, residential, industrial, agriculture, greenspace, unclear), and we recorded additional descriptions for each category (e.g. road: paved). We found that the median percent of modified shoreline area was 9%. Of the 685 meadows analyzed 19% had no modifications, and 9% were more than 50% modified. The dominant modification type across the study area was residential development. The resulting dataset provides valuable information for assessing land use patterns and predicting potential impacts to nearshore ecosystems. Future efforts should continue to add to and refine the shoreline modification dataset as seagrass spatial datasets are updated. This study highlights the importance of managing seagrass within its broader seascape and landscape context, and it emphasizes the need for ongoing data collection and analysis to inform effective seagrass management strategies.
 french_abstract: |
   Le résumé
 output:
