--- a/shorelinemod_report.Rmd
+++ b/shorelinemod_report.Rmd
@@ -13,7 +13,7 @@ The objective of this project is to map and quantify the shoreline modifications
 
 Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of up to 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in 2018 for @Cristiani2021. This dataset consists of surveyed and modeled data from a variety of government and non-governmental sources - primarily the British Columbia Marine Conservation Atlas (BCMCA 2011) and the ShoreZone coastal mapping inventory [@coastalandoceanresources2017] (Table \@ref(tab:eelgrasstable)). Shoreline data are linear features generated from aerial imagery that classify the ecological features of the BC coast including eelgrass. In @CEC2016, these linear features were combined with bathymetric data to generate predictions of eelgrass extent [@reshitnyk2016]. The dataset includes 685 spatially distinct meadows across the Strait of Georgia Bioregion as well as in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion (Figure \@ref(fig:studyareafig)).
 
-Due to the combination of data with varying collection methodologies and error, there is uncertainty in the accuracy of our dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More significant, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, whereas the newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A newer ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)).
+Due to the combination of data with varying collection methodologies and error, there is uncertainty in the accuracy of our dataset, and it is best used for coarse estimates of presence and extent. Since the time of our analysis, there has been additional eelgrass mapping and refining of the existing datasets. A comparison to a new DFO dataset shows areas where our dataset may overpredict presence and where additional meadows have been added. In some cases, the polygons of the newer dataset are more precise (i.e., multiple small polygons that are represented as one large general polygon in the earlier dataset), however, these locations would not alter our analysis of shoreline modification. More important than discrepancies of overlap, are areas where the datasets do not overlap. Our dataset generally has more polygons in the Discovery Islands, Lasqueti Island, Howe Sound, and the Gulf Islands, whereas the newer dataset fills data gaps in areas such as Sechelt Inlet and Saanich Inlet (Figure \@ref(fig:meadowDiff)). A newer ShoreZone dataset fills gaps along the Sunshine Coast, Texada Island, and near Vancouver (Figure \@ref(fig:meadowDiffShorezone)).
 
 ```{r eelgrasstable}
 df <- data.frame(
@@ -72,7 +72,7 @@ kbl(d, "latex", align="cl", booktabs = TRUE, caption = "Shoreline modification p
 
 # Results
 
-The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers. The lowest levels of modification occurred near smaller islands and in the northern part of the study area (i.e. Johnstone Strait). The median amount of modified shoreline was 9%. Of the 685 meadows, 19% has no modifications, 9% were more than 50% modified, and 1% were more than 80% modified (Figure \@ref(fig:percentmod)). The dominant modification type across the study area was residential development (Figure \@ref(fig:percentmodpertype)a). All other modification types had relatively low values, except at two meadows (Crofton, Duncan Bay) where the shoreline was more than 75% modified by industrial development (Figure \@ref(fig:percentmodpertype)c). The dominant modification type across the study area was residential development. Agriculture varied by latitude with most coastal agriculture occurring in the southern portion of the study area (Figure \@ref(fig:percentmodpertype)b).
+The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers. The lowest levels of modification occurred near smaller islands and in the northern part of the study area (i.e. Johnstone Strait). The median amount of modified shoreline was 9%. Of the 685 meadows, 19% had no modifications, 9% were more than 50% modified, and 1% were more than 80% modified (Figure \@ref(fig:percentmod)). The dominant modification type across the study area was residential development (Figure \@ref(fig:percentmodpertype)a). All other modification types had relatively low values, except at two meadows (Crofton, Duncan Bay) where the shoreline was more than 75% modified by industrial development (Figure \@ref(fig:percentmodpertype)c). The dominant modification type across the study area was residential development. Agriculture varied by latitude with most coastal agriculture occurring in the southern portion of the study area (Figure \@ref(fig:percentmodpertype)b).
 
 ```{r exampleareas, fig.pos="H", fig.cap = "Shoreline modifications within buffered areas adjacent to seagrass meadows. All buffers are 100 meters wide, as measured from the coastline. The six selected areas are shown for example and do not imply any significance over other areas."}
 knitr::include_graphics(here::here("figures/02_shorelinemod_examples.png"))
@@ -90,7 +90,7 @@ knitr::include_graphics(here::here("figures/04_shorelinemod_perctype.png"))
 
 By quantifying shoreline modifications adjacent to seagrass meadows, we've provided a novel high resolution dataset for documenting land use over a large spatial extent and predicting potential impacts to nearshore ecosystems. The variation in the distribution and patterns of modifications across the region illustrate the different shoreline threats that seagrass meadows may face based on their location. While areas of high naturalness are generally targeted for conservation over degraded areas [@Rubidge2020; @UNCBD2008], other criteria such as biological diversity, productivity and connectivity may result in targeting meadows that are threatened by shoreline activities [@cristiani2022; @Rubidge2020]. If an area including a meadow is selected for management (e.g. an EBSA), then it's likely the shoreline modifications will have to be considered for possible mitigation of impacts. It will then be important to know the spatial distribution of modifications because the management action will vary with the type of modification.
 
-This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022]. Lastly, since the time of our analysis eelgrass has continued to be mapped and datasets refined. It will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with eelgrass datasets. 
+This analysis could be strengthened by addressing some of its assumptions and limitations. We used a uniform buffer from the coast, but there is likely a distance-decay of the impacts from certain activities, such that subtidal meadows may experience impacts differently than intertidal meadows. In addition, a narrow buffer of vegetation on the edge of the coast could be enough to mitigate the effects of certain modifications behind this buffer. Most importantly, it will be necessary to quantify the relative severity of each modification and the vulnerability of seagrass to different pressures. For example, runoff from agricultural areas may be more damaging than runoff from residential areas [@Teck2010]. Shoreline modifications are representative of only one type of threat to seagrass, however, by quantifying severity and vulnerability scores, this data could be incorporated into larger cumulative effects analyses in which the overall impact of many stressors is quantified [@ClarkeMurray2016; @ClarkeMurray2020; @Murphy2022]. Lastly, since the time of this analysis eelgrass has continued to be mapped and datasets refined. It will be important to view this shoreline modifications dataset as a starting point and to continue to develop it in conjunction with the most current eelgrass datasets. 
 
 Our analysis emphasizes the importance of managing seagrass and the biodiversity it supports in the spatial context of the larger seascape and landscape. While seagrass area is declining globally, it appears to be stable in the north Pacific [@Dunic2021], and in the Washington state portion of the Salish Sea, seagrass has been resilient despite an increase in human activities [@Shelton2016]. To further enhance successful seagrass management, understanding exactly which activities may be impacting seagrass locally will likely require a more precise analysis of human activities, the stressors they generate, and the vulnerability of seagrass to these stressors. Therefore, it will be important to continue to gather the high resolution spatial data that informs the initial stage of these analyses.
 
@@ -123,7 +123,7 @@ The shoreline modification dataset is available at: *Link to dataset wherever it
 knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_1.png"))
 ```
 
-```{r meadowDiffShorezone, fig.pos="H", fig.cap = "The recent additions to the ShoreZone eelgrass dataset that are not present in the datset used in this study."}
+```{r meadowDiffShorezone, fig.pos="H", fig.cap = "The recent additions to the ShoreZone eelgrass dataset that are not present in the dataset used in this study."}
 knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_2.png"))
 ```
 
@@ -189,7 +189,7 @@ knitr::include_graphics(here::here("figures/Seagrass_dataset_differences_2.png")
     * A right click will delete that last vertex.
     * Houses were not digitized separately, unless the greenspace/treeline between them was larger than ~20m.
     * If two buffered coastline polygons overlap, you do not need to trace the same feature for each one. This will be dealt with later in ArcGIS.
-    * The coastaline and polygons we digitized do not always line up perfectly with the imagery depending on the time window used as there is some geographic shifting between imagery of different years (variation in georeferencing of imagery).
+    * The coastline and polygons we digitized do not always line up perfectly with the imagery depending on the time window used as there is some geographic shifting between imagery of different years (variation in georeferencing of imagery).
     * Logging areas were only digitized if the most recent imagery indicated relatively recent logging activity (~ within the past decade).
 
 6. In the pop-up, for Name, enter the sg_103_clipcoast ID number followed by an understroke and then a sequential integer.
